# gba

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-test.yml
include/: bus.h  clock.h  cpu.h  emu.h  helpers.h  rom.h  test.h
include/instructions/: arm_instruction.h  arm_isntruction.h  condition.h  instruction.h  thumb_instruction.h
sdl/: WhatsNew.txt
sdl/include/: SDL.h  SDL_hints.h  SDL_main.h
source/: bus.cpp  clock.cpp  cpu.cpp  emu.cpp  helpers.cpp  main.cpp  rom.cpp  test.cpp
source/instructions/: arm_instruction.cpp  arm_isntruction.cpp  condition.cpp  instruction.cpp  thumb_instruction.cpp
test/: CMakeLists.txt  alu_instructions.cpp  instructions.cpp  mul_instructions.cpp  test.cpp  test.h
